# stigmergic-block-firmware

./: README.md  commands
bootloader/: Makefile  optiboot.c  optiboot_atmega328.hex  optiboot_atmega328.lst  pin_defs.h
firmware/: Makefile  run.sh
firmware/demos/: firmware-0a19b22.hex
firmware/source/: Firmware.cpp  Firmware.h  HardwareSerial.cpp  HardwareSerial.h  I2CController.cpp  I2CController.h  Microcontroller.h  Print.cpp  Print.h  Printable.h  Stream.cpp  Stream.h  String.cpp  Timer.cpp  Timer.h  accelerometer_controller.cpp  accelerometer_controller.h  adc_controller.h  avr5.xn  clock.cpp  clock.h  firmware.cpp  firmware.h  huart_controller.cpp  huart_controller.h  interrupt.cpp  interrupt.h  led_controller.cpp  led_controller.h  nfc_controller.cpp  nfc_controller.h  port_controller.cpp  port_controller.h  power_controller.h  task_scheduler.cpp  task_scheduler.h  timer.cpp  timer.h  tuart_controller.cpp  tuart_controller.h  (+4 more)
firmware/source/utils/: a.out  container.h  testbench.cpp
firmware/src/: CMakeLists.txt  accelerometer_controller.cxx  accelerometer_controller.h  clock.cxx  clock.h  huart_controller.cxx  huart_controller.h  interrupt.cxx  interrupt.h  led_controller.cxx  led_controller.h  main.cxx  nfc_controller.cxx  nfc_controller.h  port_controller.cxx  port_controller.h  system.cxx  system.h  task_scheduler.cxx  task_scheduler.h  tuart_controller.cxx  tuart_controller.h  tw_controller.cxx  tw_controller.h
firmware/src/utils/: container.cxx  container.h
wip/: io_controller.h  tw_controller.cpp  tw_controller.h
